-
Bug
-
Resolution: Done
-
P1: Critical
-
5.11.1
-
None
Up to Q5.10 function param types were displayed as links to the type page. This seems to be broken in Qt5.11 and they show as plain text.
Example of the issue:
Qt 5.10 http://doc.qt.io/archives/qt-5.10/qwidget.html#testAttribute
Qt 5.11 http://doc.qt.io/qt-5/qwidget.html#testAttribute
- is duplicated by
-
QTBUG-70574 Links to other classes don't work in the presence of namespaces
-
- Closed
-
-
QTBUG-69785 No link to Qt::WindowModality in QML Window docs
-
- Closed
-
-
QTBUG-70424 [Reg 5.10-5.11] No link in method documentation to enum argument
-
- Closed
-
- relates to
-
QTBUG-70231 Regression: QDoc no linger auto-links enumerations used in a function signature
-
- Closed
-
-
QTBUG-70321 qdoc: Empty documentation generated for namespaces
-
- Closed
-
For Gerrit Dashboard: QTBUG-69484 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
245600,2 | qdoc: Fix link resolution for types under namespaces | 5.12 | qt/qttools | Status: MERGED | +2 | 0 |